--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <p class="" id="prompt">Log in to join the Right to Repair community</p>
                             <div class="form-group">
                               <label for="name">Username</label><label id="nmad" class="">*</label>
-                              <input  id="name" type="name" class="form-control" placeholder="Enter your Username">
+                              <input  id="name" type="name" class="form-control background-color: #d62424;" placeholder="Enter your Username">
                             </div>
                             <br>
                             <div class="form-group">
